--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,24 @@
 #image{
     margin: auto;
-    max-width: 100%;
+    max-width: 20%;
     height: auto;    
     display: block;
+  }
+
+  .important-years{
+    background-color: gainsboro;
+    font-size:20px;
+    width: 40%;
+    display: block;
+    margin: auto;   
+    text-align: left;
+    border: 1px;
+    border-radius: 5%;
+    border-style: solid;
+    border-color: gray;
+  }
+
+  body{
+    background-color: antiquewhite;
+    text-align: center;
   }
